trunk/Archive2/d7/14c804c79836d0/output
main.cpp: In function 'int main()':
main.cpp:8:55: error: 'hexfloat' is not a member of 'std'
               << "The number 0.01 in hexfloat:   " << std::hexfloat << 0.01 << '\n'
                                                       ^
main.cpp:9:55: error: 'defaultfloat' is not a member of 'std'
               << "The number 0.01 in default:    " << std::defaultfloat << 0.01 << '\n';
                                                       ^
main.cpp:11:40: error: 'hexfloat' is not a member of 'std'
     std::istringstream("0x1P-1022") >> std::hexfloat >> f;
                                        ^
